fix: Change spacing in tech section

--- a/src/app/modules/portfolio/components/technologies/technologies.component.scss
+++ b/src/app/modules/portfolio/components/technologies/technologies.component.scss
@@ -2,14 +2,16 @@
 
     display: flex;
     flex-direction: column;
-    gap: 2rem;
 
-    padding: 100px 30px; 
+    padding: 70px 30px; 
 
     .intro-container {
         display: flex;
 
         .intro {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
 
             h2 {
                 font-size: 3rem;
@@ -27,13 +29,12 @@
         .bg {
             z-index: 1;
             position: relative;
-            top: -50px;
 
 
             img {
                 filter: opacity(15%), ;
                 max-width: 500px;
-                height: 300px;
+                height: 350px;
             }
         }
     }
@@ -62,6 +63,7 @@
     .technologies {
 
         padding: 100px 20px; 
+        gap: 1rem;
 
         .intro-container {
 
